# acegf-wallet

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md  build.rs  cbindgen.toml
benches/: acegf_bench.rs
include/: acegf.h
paper/: co-protocol.md  eprint.tex  paper.tex  paper.txt  references.bib
scripts/: build-wasm.sh
src/: acegf.rs  acegf_core.rs  acegf_structs.rs  ffi.rs  hfi_pay.rs  lib.rs  main.rs  pqclean_ffi.rs  session.rs  test_vectors.rs  vadar.rs  wasm.rs  wasm_zk.rs  zk.rs
src/signer/: bitcoin_signer.rs  evm_signer.rs  ml_dsa44_signer.rs  mod.rs  solana_signer.rs  tron_signer.rs
src/utils/: acegf_rev_generator.rs  mod.rs  passphrase_sealing_util.rs
tests/: test_acegf.rs  test_acegf_core.rs  test_passphrase_sealing_util.rs  test_view_ffi_wasm_parity.rs
